Fix typos and improve output formatting